@@ -11,4 +11,15 @@ config EXAMPLES_CXXTEST
 		Enable the C++ test program
 
 if EXAMPLES_CXXTEST
+
+config EXAMPLES_CXXTEST_CXXINITIALIZE
+	bool "C++ Initialization"
+	default y
+	depends on HAVE_CXX && HAVE_CXXINITIALIZE
+	---help---
+		By default, if CONFIG_HAVE_CXX and CONFIG_HAVE_CXXINITIALIZE are
+		defined, then this example will call the NuttX function to
+		initialize static C++ constructors.  This option may be disabled,
+		however, if that static initialization was preformed elsewhere.
+
 endif
