@@ -10,4 +10,15 @@ config EXAMPLES_HELLOXX
 		Enable the \"Hello, World!\" C++ example
 
 if EXAMPLES_HELLOXX
+
+config EXAMPLES_HELLOXX_CXXINITIALIZE
+	bool "C++ Initialization"
+	default y
+	depends on HAVE_CXX && HAVE_CXXINITIALIZE
+	---help---
+		By default, if CONFIG_HAVE_CXX and CONFIG_HAVE_CXXINITIALIZE are
+		defined, then this example will call the NuttX function to
+		initialize static C++ constructors.  This option may be disabled,
+		however, if that static initialization was preformed elsewhere.
+
 endif
